# Hierarchical-Energy-Based-Reasoning-Network

./: .gitignore  README.md  pyproject.toml
examples/: mnist_example.py  xor_example.py
herblib/: __init__.py  _backend.py  _types.py
herblib/core/: __init__.py  energy.py  gradients.py
herblib/dynamics/: __init__.py  equilibrium.py  leapfrog.py
herblib/learning/: __init__.py  cd.py  direct_energy.py
herblib/network/: __init__.py  herb.py  multi_herb.py
herblib/utils/: __init__.py  init.py  metrics.py
tests/: conftest.py  test_cd.py  test_direct_energy.py  test_energy.py  test_equilibrium.py  test_gradients.py  test_herb.py  test_leapfrog.py  test_multi_herb.py
